[package]
name = "helloworld-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
